# hive

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md
examples/: conway_terminal.py  move_command.py  simple_run.py
hive/: __init__.py  components.py  core.py  events.py  resources.py  runtime.py  serialize.py  store.py
hive/command/: dispatcher.py  router.py
src/: components.py  core.py  map.py  runtime.py  serialize.py  spatial.py  store.py  world.py
src/command/: commands.py  dispatcher.py  router.py
src/systems/: ai.py  combat.py  movement.py  render.py
tests/: test_query_api.py  test_runtime.py  test_serialize_roundtrip.py  test_store_world.py
