[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive"
version = "0.0.8"
description = "A minimal, generic ECS micro-framework (runtime/core/store/command dispatcher)."
authors = [ { name = "tiboitel" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://example.org/hive"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
